--- a/undervoltWatch.service
+++ b/undervoltWatch.service
@@ -2,11 +2,12 @@
 Description=undervoltWatch
 
 [Service]
-Type=forking
-RemainAfterExit=true
-ExecStart=/usr/bin/sudo /usr/bin/undervoltWatch
+Type=simple
+ExecStart=/usr/bin/undervoltWatch
 PIDFile=/var/run/undervoltWatch.pid
-Restart=on-failure
+RemainAfterExit=no
+Restart=always
+RestartSec=5
 
 [Install]
 WantedBy=multi-user.target
